background animation fixed position so it's always visible and doesn't move when scrolling. Snap scrolling working in conjunction with animated background and header/nav is transparent so that animation works across the entire view port

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -50,7 +50,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: transparent;
   min-height: 8vhh;
   display: flex;
   flex-direction: column;
@@ -93,10 +93,10 @@ body {
 }
 
 .container {
-  position: relative;
+  position: fixed;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 
