--- a/portfolio/src/CSS/Test.module.css
+++ b/portfolio/src/CSS/Test.module.css
@@ -4,10 +4,11 @@ body {
 }
 
 .container {
-  position: relative;
+  position: fixed;
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  z-index: -100;
 }
 
 .bubbles {
